improve imla_txt dimensions; fix tab_toggled
- fix height at the end being ~0.5rem too tall, thus obscuring small
  part of the header buttons.  this issue were introduced in the commit
  `3b5b4f3` "fix spaces" when the header's buttons' margins were
  increased a bit.

- switched to "box-sizing: border-box" for imla_txt because its
  dimensions (width & height) are set with that assumption.

- always enforce a large (2em) bottom padding, for tashkeel and
  comfortable typing.

- tab_toggled() was doing nothing because it checked if the checkboxes
  were "open" instead of "checked".

--- a/style.css
+++ b/style.css
@@ -283,13 +283,19 @@ html { font-size: calc(16px + 0.5vw) }
 #imla_txt {
   font-size: 1.5rem;
   text-align: right;
-  padding: 0 1em 0.5em 0.5em;  /* bottom padding needed for tashkeel */
+  padding: 0.5em;
+  padding-bottom: 2em;
+  box-sizing: border-box;
   font-family: AmiriQuranWeb;
   width: min(90%, 70vw);
   /* height: 95vh; */ /* set thru JS */
   margin: auto;
   margin-bottom: 1rem;
   border-radius: 0.25rem;
+}
+
+#imla_txt.done {
+  padding-bottom: 0;
 }
 
 button {
